--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
 
 :root {
-  --modal-duration: 1s;
+  --modal-duration: 0.5s;
   --primary-color: #30336b;
   --secondary-color: #be2edd;
 }
@@ -13,6 +13,11 @@
 body {
   font-family: Lato, sans-serif;
   margin: 0;
+  transition: transform 0.3s ease-in-out;
+}
+
+body.show-nav {
+  transform: translateX(200px);
 }
 
 nav {
@@ -26,7 +31,6 @@ nav {
   height: 100vh;
   z-index: 100;
   transform: translateX(-100%);
-  transition: transform 0.3s ease-in-out;
 }
 
 nav .logo {
@@ -124,6 +128,10 @@ button:focus {
   bottom: 0;
 }
 
+.modal-container.show-modal {
+  display: block;
+}
+
 .modal {
   background-color: #fff;
   border-radius: 5px;
@@ -135,6 +143,9 @@ button:focus {
   transform: translate(-50%, -50%);
   max-width: 100%;
   width: 400px;
+  animation-name: openmodal;
+  animation-duration: var(--modal-duration);
+  animation-timing-function: ease-in-out;
 }
 
 .modal-header {
@@ -172,4 +183,14 @@ button:focus {
   position: absolute;
   top: 0;
   right: 0;
+}
+
+@keyframes openmodal {
+  from {
+    transform: translate(-50%, -50%) scale(0%);
+  }
+
+  to {
+    transform: translate(-50%, -50%) scale(100%);
+  }
 }
